TitleNavBarLinkTarget: make title link to point to custom target

--- a/src/IdentityManager2/Assets/Templates/navbar.html
+++ b/src/IdentityManager2/Assets/Templates/navbar.html
@@ -1,6 +1,6 @@
 ﻿<div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-header">
-        <a href="#/" class="navbar-brand">
+        <a href="{{layout.titleNavBarLinkTarget}}" class="navbar-brand">
             <img ng-src="{{PathBase}}/assets/Content.logo.png" class="logo-banner">
             IdentityManager 2
         </a>
